fixing alignment in new/edit task form, adding destroy to users

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,24 +21,6 @@
   padding-top:70px;
 }
 
-div#footer {
-padding: 15px;
-margin: 20px;
-border-top: thin solid #000000;
-}
-
 .panel-body {
-  height: 100px;
-}
-
-.panel {
-  margin-top: 30px;
-}
-
-.table-spacing {
-  padding-right:10px;
-}
-
-footer {
-  margin: 10px;
+  min-height: 100px;
 }
